# ALAB2CRT

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/alab2crt/: __init__.py  cli.py  main.py
src/alab2crt/config/: act.yml.sample  atd.yml.sample  base.yml
src/alab2crt/core/: __init__.py  session.py
src/alab2crt/providers/: __init__.py  act.py  atd.py
